# Whisper

./: README.md
whisper-secrets/: pyproject.toml  whisper.config.yaml
whisper-secrets/tests/: test_cli.py
whisper-secrets/tests/core/: __init__.py  test_basic.py  test_cli.py  test_discord_webhook_detector.py  test_scanner.py
whisper-secrets/whisper/: __init__.py  cli.py
whisper-secrets/whisper/ai/: classifier.py  ollama_client.py  pyproject.toml
whisper-secrets/whisper/config/: settings.py
whisper-secrets/whisper/core/: __init__.py  scanner.py
whisper-secrets/whisper/core/detectors/: base64_detector.py  discord_webhook_detector.py  entropy_detector.py  keyword_detector.py  regex_detector.py  test_url_detector.py  url_detector.py
