[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-secrets"
version = "0.1.0"
description = "An AI-powered secret scanner to find real secrets without the noise."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.scripts]
whisper = "whisper.cli:app"

[project.entry-points."whisper.detectors"]
regex = "whisper.core.detectors.regex_detector:RegexDetector"
entropy = "whisper.core.detectors.entropy_detector:EntropyDetector"
keyword = "whisper.core.detectors.keyword_detector:KeywordDetector"
base64 = "whisper.core.detectors.base64_detector:Base64Detector"
url = "whisper.core.detectors.url_detector:UrlDetector"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=0.10.0",
]